# STH-System-Info

./: .gitignore  LICENSE  README.md  pyproject.toml
Results/amponed8/: manifest.json  summary.json  system_profile.md
Results/amponed8/raw/: cmdline.txt  df.txt  dmi_baseboard.txt  dmi_memory.txt  dmi_processor.txt  dmi_system.txt  ipaddr.txt  iproute.txt  lsblk.json  lscpu-cache.txt  lscpu-topology.csv  lscpu.txt  lshw_network.txt  lspci.txt  lspci_verbose.txt  meminfo.txt  numactl.txt  uname.txt
Results/amponed8/topology/: lstopo.txt  lstopo.xml
Results/evo-x2/20260425T212324Z/: manifest.json
Results/evo-x2/20260425T212324Z/system-info/: summary.json  system_profile.md
Results/evo-x2/20260425T212324Z/system-info/raw/: cmdline.txt  cpuinfo.txt  df.txt  dmi_baseboard.txt  dmi_memory.txt  dmi_processor.txt  dmi_system.txt  ipaddr.txt  iproute.txt  lsblk.json  lscpu-cache.txt  lscpu-topology.csv  lscpu.txt  lshw_network.txt  lspci.txt  lspci_verbose.txt  meminfo.txt  numactl.txt  uname.txt
Results/evo-x2/20260425T212324Z/system-info/topology/: lstopo.xml.stderr.txt
hosts/: sth-lab.toml
src/sth_system_info/: cli.py  collector.py  config.py  remote.py
tests/: test_collector.py
