[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sth-system-info"
version = "0.1.0"
description = "Remote Linux system inventory capture for STH benchmark workflows"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "STH-Dev"}
]
dependencies = [
  "paramiko>=3.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
]

[project.scripts]
sth-system-info = "sth_system_info.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
